Add small resolution

--- a/style/style.scss
+++ b/style/style.scss
@@ -149,3 +149,22 @@ $width-detail: calc(100vw - 140px - 35%);
     margin: 0 0 5px;
   }
 }
+
+@media (max-width:480px) {
+  .resume {
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .img-main {
+    width: calc(100% - 40px);
+  }
+
+  .short-info {
+    width: 100%;
+  }
+
+  .detail-info {
+    width: 100%;
+  }
+}
